// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JiraApproval/> tests isWaiting test 1`] = `
<div>
  <div
    class="info"
    data-type="jira"
  >
    <div
      class="timer"
    >
      <div>
        MOCK DURATION
      </div>
      <span>
        execution.approvals.timeRemainingSuffix
      </span>
    </div>
    <div
      class="jiraTicket"
    >
      <span>
        execution.approvals.jiraTicket
      </span>
      <a
        href="https://harness.atlassian.net/browse/CDNG-1234"
        rel="noopener noreferrer"
        target="_blank"
      >
        CDNG-1234
      </a>
    </div>
  </div>
  <div
    class="jiraApproval"
  >
    <div
      class="jiraCriteria"
    >
      <div
        class="title"
      >
        <span>
          pipeline.jiraApprovalStep.approvalCriteria
        </span>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle open"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="collapseContainer"
          >
            <div>
              execution.approvals.allConditionsMsg
            </div>
            <ul
              class="conditions"
            >
              <li>
                <span>
                  execution.approvals.conditions.equals
                </span>
                <span
                  class="key"
                >
                  Resolved
                </span>
              </li>
              <li>
                <span>
                  execution.approvals.conditions.not_in
                </span>
                <span
                  class="key"
                >
                  In-progress
                </span>
                <span
                  class="key"
                >
                  Open
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="jiraCriteria"
    >
      <div
        class="title"
      >
        <span>
          pipeline.jiraApprovalStep.rejectionCriteria
        </span>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle open"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="collapseContainer"
          >
            <span>
              common.jexlExpression
            </span>
            <div
              class="jexl"
            >
              \${changes[0].ref.displayId}-\${repository.name.substring(\${repository.name.indexOf('-')+1})}
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<JiraApproval/> tests not isWaiting test 1`] = `
<div>
  <div
    class="info"
    data-type="jira"
  >
    <div
      class="jiraTicket"
    >
      <span>
        execution.approvals.jiraTicket
      </span>
      <a
        href="https://harness.atlassian.net/browse/CDNG-1234"
        rel="noopener noreferrer"
        target="_blank"
      >
        CDNG-1234
      </a>
    </div>
  </div>
  <div
    class="jiraApproval"
  >
    <div
      class="jiraCriteria"
    >
      <div
        class="title"
      >
        <span>
          pipeline.jiraApprovalStep.approvalCriteria
        </span>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle open"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="collapseContainer"
          >
            <div>
              execution.approvals.allConditionsMsg
            </div>
            <ul
              class="conditions"
            >
              <li>
                <span>
                  execution.approvals.conditions.equals
                </span>
                <span
                  class="key"
                >
                  Resolved
                </span>
              </li>
              <li>
                <span>
                  execution.approvals.conditions.not_in
                </span>
                <span
                  class="key"
                >
                  In-progress
                </span>
                <span
                  class="key"
                >
                  Open
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="jiraCriteria"
    >
      <div
        class="title"
      >
        <span>
          pipeline.jiraApprovalStep.rejectionCriteria
        </span>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle open"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="collapseContainer"
          >
            <span>
              common.jexlExpression
            </span>
            <div
              class="jexl"
            >
              \${changes[0].ref.displayId}-\${repository.name.substring(\${repository.name.indexOf('-')+1})}
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
